fix: scope close 'X' always visible

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -693,6 +693,6 @@
   }
 }
 
-#app[data-scope="world"] #app-scope {
+#app[data-scope="world"] .close-scope {
   display: none;
 }
